# 381706-1_Alllabs_Suslov

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  main.h
ArrList/: ArrList_main.cpp
ArrListTest/: ArrListTest.cpp
List/: List_main.cpp
ListLib/: Elem.h  List.h
ListTest/: ListTest.cpp
Matrix/: Matrix_main.cpp
MatrixLib/: Matrix.h
MatrixTest/: MatrixTest.cpp
MultiStack/: MultiStack_main.cpp
MultiStackLib/: MultiStack.h  NewStack.h
MultiStackTest/: MultiStackTest.cpp
MyExceptionLib/: ExceptionLib.h
Polish/: Polish_main.cpp
PolishLib/: Polish.cpp  Stroka.cpp  Stroka.h
PolishTest/: PolishTest.cpp
Polynom/: CMakeLists.txt  Polynom_main.cpp
PolynomLib/: CMakeLists.txt  Monom.cpp  Monom.h  Polynom.cpp
PolynomTest/: PolynomTest.cpp
Queue/: Queue_main.cpp
QueueLib/: Queue.h
QueueTest/: QueueTest.cpp
Stack/: Stack_main.cpp
StackLib/: Stack.h
StackListTest/: StackListTest.cpp
StackTest/: StackTest.cpp
Vector/: CMakeLists.txt  Vector_main.cpp
VectorLib/: Vector.h
VectorTest/: VectorTest.cpp
Отчеты/: ArrList_Suslov.docx  List_Suslov.docx  Matrix_Suslov.docx  MultiStack_Suslov.docx  Polski_Suslov.docx  Polynom_Suslov.docx  Queue_Suslov.docx  ScanTable_Suslov.docx  StackList_Suslov.docx  Stack_Suslov.docx  ~$anTable_Suslov.docx  ~$ltiStack_Suslov.docx
очередь/: Queue_main.cpp
